--- a/api-specs/api-v1.yaml
+++ b/api-specs/api-v1.yaml
@@ -6,7 +6,7 @@ info:
 servers:
   - url: https://api.xime.com/v1
 components:
-  securitySchemes:
+  security:
     ApiKeyAuth:
       type: apiKey
       in: header
@@ -14,7 +14,7 @@ components:
 paths:
   /products:
     get:
-      summary: get all products
+      summary: Get all products.
       security:
         - ApiKeyAuth:[]
       parameters:
@@ -68,7 +68,7 @@ paths:
           description: Internal Server Error
   /products/{productId}:
     get:
-      summary: Get product by ID
+      summary: Get product by ID.
       security:
         - ApiKeyAuth:[]
       parameters:
