--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI - Build API and deploy API spec
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -29,8 +27,23 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Set up Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      # Install Redocly CLI
+      - name: Install Redocly CLI
+        run: npm install -g @redocly/cli
+
+      # Lint OpenAPI spec
+      - name: Lint OpenAPI Spec
+        run: redocly lint api-specs/api-v1.yaml
+
+      # Build docs
+      - name: Build Docs
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          redocly bundle api-specs/api-v1.yaml --output docs/bundled-api-v1.yaml
+          redocly build-docs docs/bundled-api-v1.yaml --output docs/index.html
+
