--- a/api-specs/api-v1.yaml
+++ b/api-specs/api-v1.yaml
@@ -129,7 +129,7 @@ components:
     Product:
       type: object
       properties:
-      id:
+      productId:
         type: string
       name:
         type: string
