--- a/api-specs/api-v1.yaml
+++ b/api-specs/api-v1.yaml
@@ -162,7 +162,7 @@ components:
           type: string
   parameters:
     ProductId:
-     name: Id
+     name: productId
      in: path
      required: true
      schema:
