--- a/api-specs/api-v1.yaml
+++ b/api-specs/api-v1.yaml
@@ -9,6 +9,8 @@ paths:
   /products:
     get:
       summary: Get all products.
+      security:
+        - ApiKeyAuth: []
       parameters:
         - name: category
           in: query
@@ -37,6 +39,8 @@ paths:
           description: Internal Server Error
     post:
       summary: Create a new product
+      security:
+        - ApiKeyAuth: []
       requestBody:
         required: true
         content:
@@ -59,6 +63,8 @@ paths:
   /products/{productId}:
     get:
       summary: Get product by ID.
+      security:
+        - ApiKeyAuth: []
       parameters:
        - $ref: "#/components/parameters/ProductId"
       responses:
@@ -76,6 +82,8 @@ paths:
           description: Internal Server Error
     put:
       summary: Update product.
+      security:
+        - ApiKeyAuth: []
       parameters:
         - name: productId
           in: path
@@ -105,6 +113,8 @@ paths:
           description: Internal Server Error
     delete:
       summary: Delete product
+      security:
+        - ApiKeyAuth: []
       parameters:
         - name: productId
           in: path
@@ -167,3 +177,7 @@ components:
      required: true
      schema:
       type: string
+  securitySchemes:
+    ApiKeyAuth:
+      type: http
+      scheme: basic
